--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,50 @@
 .instagram-icon {
   height: 45px;
 }
+
+/* list items css */
+
+h1 {
+  margin-bottom: 10px;
+}
+
+input {
+  width: 75%;
+  padding: 8px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.user-list-item {
+  background-color: #f0f8ff;
+  list-style-type: none;
+  text-align: start;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  border-radius: 8px;
+  margin: 5px;
+}
+.user-img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+.user-details {
+  margin-left: 15px;
+}
+.user-name {
+  font-size: 19px;
+  color: #3f3f41;
+}
+.user-id {
+  color: #6f6f6f;
+  font-size: 12px;
+}
+.remove-btn {
+  font-size: 18px;
+  color: #7b7b7b;
+  margin-left: auto;
+  padding: 5px;
+  border: none;
+}
